app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akkar-deployment
  labels:
    app: akkar
spec:
  selector:
    matchLabels:
      app: akkar
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: akkar
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
