app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: akkar-service
spec:
  selector:
    app: akkar
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
